Modification architecture + conversion de type + PeriodSet.isAdjacent